// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`switch empty fallthrough to default (0) 1`] = `
"require(\\"lualib_bundle\\");
local ____exports = {}
function ____exports.__main(self)
    local out = {}
    repeat
        local ____switch3 = 0
        local ____cond3 = ____switch3 == 1
        if ____cond3 then
            __TS__ArrayPush(out, \\"default\\")
        end
        if not ____cond3 then
            __TS__ArrayPush(out, \\"default\\")
        end
    until true
    return out
end
return ____exports"
`;

exports[`switch empty fallthrough to default (1) 1`] = `
"require(\\"lualib_bundle\\");
local ____exports = {}
function ____exports.__main(self)
    local out = {}
    repeat
        local ____switch3 = 1
        local ____cond3 = ____switch3 == 1
        if ____cond3 then
            __TS__ArrayPush(out, \\"default\\")
        end
        if not ____cond3 then
            __TS__ArrayPush(out, \\"default\\")
        end
    until true
    return out
end
return ____exports"
`;

exports[`switch produces optimal output 1`] = `
"require(\\"lualib_bundle\\");
local ____exports = {}
function ____exports.__main(self)
    local out = {}
    repeat
        local ____switch3 = 0
        local ____cond3 = ((____switch3 == 0) or (____switch3 == 1)) or (____switch3 == 2)
        if ____cond3 then
            __TS__ArrayPush(out, \\"0,1,2\\")
        end
        if ____cond3 then
            __TS__ArrayPush(out, \\"default\\")
        end
        ____cond3 = ____cond3 or (____switch3 == 3)
        if ____cond3 then
            do
                __TS__ArrayPush(out, \\"3\\")
                break
            end
        end
        ____cond3 = ____cond3 or (____switch3 == 4)
        if ____cond3 then
            __TS__ArrayPush(out, \\"4\\")
        end
        if not ____cond3 then
            __TS__ArrayPush(out, \\"default\\")
            do
                __TS__ArrayPush(out, \\"3\\")
                break
            end
        end
    until true
    repeat
        local ____switch6 = 2
        local ____cond6 = (____switch6 == 0) or (____switch6 == 1)
        if ____cond6 then
            __TS__ArrayPush(out, \\"0,1\\")
            break
        end
        if not ____cond6 then
            __TS__ArrayPush(out, \\"default\\")
            __TS__ArrayPush(out, \\"0,1\\")
            break
        end
    until true
    repeat
        local ____switch7 = 5
        local ____cond7 = ____switch7 == 0
        if ____cond7 then
            __TS__ArrayPush(out, \\"0\\")
        end
        ____cond7 = ____cond7 or (____switch7 == 1)
        if ____cond7 then
            __TS__ArrayPush(out, \\"1\\")
            break
        end
        ____cond7 = ____cond7 or (____switch7 == 2)
        if ____cond7 then
            __TS__ArrayPush(out, \\"0,1,2\\")
        end
        ____cond7 = ____cond7 or (____switch7 == 3)
        if ____cond7 then
            __TS__ArrayPush(out, \\"3\\")
            break
        end
        if not ____cond7 then
            __TS__ArrayPush(out, \\"default\\")
        end
    until true
    return out
end
return ____exports"
`;
